# data_assessment_agent

./: .env_local  README.md  data_assessment_questionnaire_dump.sql  notes.md  prompts.toml  pyproject.toml  start.ps1
data_assessment_agent/bootstrap/: import_framework.py  import_suggested_responses.py  import_vector_dbs.py  setup_unanswerable_questions.py  setup_yes_no_questions.py
data_assessment_agent/config/: config.py  db_config.py  framework_loader.py  toml_support.py
data_assessment_agent/export/: questions.py
data_assessment_agent/model/: assessment_framework.py  db_model.py  ranking.py  sentiment.py  suggestions.py  transport.py  vector_db_model.py  yes_no_question.py
data_assessment_agent/server/: agent_session.py  assessment_server.py  assessment_server_main.py
data_assessment_agent/service/: adequate_service.py  answerable_question_service_together.py  clarification_service.py  data_assessment_service.py  openai_support.py  persistence_service.py  persistence_service_async.py  ranking_service.py  ranking_service_together.py  ranking_service_vector.py  reporting_service.py  sentiment_service.py  spider_chart.py  suggestion_proximity_service.py  suggestion_service.py  (+1 more)
docs/: OnePoint_Data_Strategy_Assessment_Framework_with_scoring_v2.xlsx  OnePoint_Data_Strategy_Assessment_Framework_with_scoring_v2.yaml  algorithm.txt  framework_questionnaire.yaml  prompts_playgorund.txt  workflow.bpmn
sql/: db_setup.sql  postgres_dump.bat  postgres_import_dump.sh  useful_queries.sql
templates/: footer.html  header.html  results-template.html
(+33 files in other folders)
